<resources>
    <string name="app_name">Search-film-app</string>
    <string name="movies">Поиск</string>
    <string name="favorite">Сохраненные</string>
    <string name="search_by_tittle">Поиск по названию</string>
    <string name="slogan">Ключ к будущему наконец-то найден. Ключ к будущему наконец-то найден</string>
    <string name="genre">Жанр:</string>
    <string name="Rating_kp">Рейтинг Кинопоиск:</string>
    <string name="_10_09_2017">10.09.2017</string>
    <string name="not_destcriprion">Нет описания</string>
    <string name="empty_release_date">----</string>
    <string name="age_restriction">0+</string>
    <string name="no_internet_connection">Нет подключения к интернету</string>
    <string name="retry">Повторить</string>
    <string name="connection_error">Ошибка подключения к серверу</string>
    <string name="empty_text">Пока ничего не найдено.\nВведите название фильма</string>
    <string name="tittle_sample">Бегущий по лезвию 2049</string>
    <string name="empty_string"> </string>
    <string name="sample_description">В недалеком будущем мир населен людьми и репликантами, созданными выполнять самую тяжелую работу. Работа офицера полиции Кей — держать репликантов под контролем в условиях нарастающего напряжения. Он случайно становится обладателем секретной информации, которая ставит под угрозу существование всего человечества. Желая найти ключ к разгадке, Кей решает разыскать Рика Декарда — бывшего офицера специального подразделения полиции Лос-Анджелеса, который бесследно исчез много лет назад.</string>
    <string name="age_restrictions">Возрастное ограничение:</string>
    <string name="age">10+</string>
    <string name="analog_film">Похожие фильмы:</string>
    <string name="error">Ошибка</string>
    <string name="year2022">2022</string>
    <string name="year">Год</string>
    <string name="genres">Жарн</string>
    <string name="rating">Рейтинг:</string>
    <string name="comedy">Комедия</string>
    <string name="action">Боевик</string>
    <string name="detective">Детектив</string>
    <string name="thriller">Триллер</string>
    <string name="horror">Ужасы</string>
    <string name="drama">Драма</string>
    <string name="adventure">Приключения</string>
    <string name="military">Военный</string>
    <string name="family">Семейный</string>
    <string name="fantastic">Фантастика</string>
    <string name="western">Вестерн</string>
    <string name="anime">Аниме</string>
    <string name="sport">Спорт</string>
    <string name="years">year</string>
    <string name="search">Поиск</string>
</resources>